refactor : BaseInitData 최신화 #94